# GuppyVulkan

./: .clang-format  .gitignore  BUILD.md  CMakeLists.txt  Guppy.cap  README.md  TODO.new.txt  TODO.old.txt  TODO.txt  VulkanTest.sln  buildMac.py  compareScrap1.txt  compareScrap2.txt  current_versions.json  set_env_vars.bat  set_env_vars.sh
CDLOD/: CDLODQuadTree.cpp  CDLODQuadTree.h  CMakeLists.txt  README.md
CDLOD/CDLOD/: CDLODQuadTree.cpp  CDLODQuadTree.h  CDLODRenderer.cpp  CDLODRenderer.h  Common.h  MiniMath.h  VkGridMesh.cpp  VkGridMesh.h
Common/: CMakeLists.txt
Common/Common/: Context.cpp  Context.h  Debug.h  Helpers.cpp  Helpers.h  Types.h
Guppy/: CMakeLists.txt
Guppy/shaders/: compile.bat  shader.vert
Guppy/src/: Arc.cpp  Arc.h  Axes.cpp  Axes.h  Box.cpp  Box.h  BufferItem.h  BufferManager.h  BufferManagerDescriptor.h  CDLOD.cpp  CDLOD.h  CMakeLists.txt  Camera.cpp  Camera.h  Cdlod.cpp  Cdlod.h  CdlodRenderer.cpp  CdlodRenderer.h  Cloth.cpp  Cloth.h  CmdBufHandler.cpp  CmdBufHandler.h  CmdBufResources.cpp  CmdBufResources.h  CommandHandler.cpp  CommandHandler.h  Compute.cpp  Compute.h  ComputeHandler.cpp  ComputeHandler.h  ComputeWork.cpp  ComputeWork.h  ComputeWorkConstants.h  ComputeWorkManager.cpp  ComputeWorkManager.h  Constants.cpp  Constants.h  ConstantsAll.h  Debug.h  Deferred.cpp  (+214 more)
Guppy/src/shaders/: color.frag  color.pbr.frag  color.vert  common.frag.glsl  compile.bat  frag.spv  line.frag  link.blinnPhong.glsl  link.color.frag  link.pbr.frag  link.texture.frag  shader.frag  shader.vert  texture.frag  texture.pbr.frag  texture.vert  util.frag  util.frag.glsl  util.frag.old.glsl  vert.spv
Guppy/src/utils/: CMakeLists.txt  Includer.cpp  Includer.h  README.md  samples_platform.h  util.cpp  util.hpp  util_init.cpp  util_init.hpp
Guppy/utils/: CMakeLists.txt  util.cpp  util.hpp  util_init.cpp  util_init.hpp
VulkanTest/: VulkanTest.vcxproj  VulkanTest.vcxproj.filters  main.cpp
VulkanTest/include/: Camera.h  Constants.h  EventHandlers.h  FileLoader.h  GuppyApp.h  Helpers.h  InputHandler.h
VulkanTest/include/Geometry/: Box.h  Model.h  Plane.h  Vertex.h
VulkanTest/shaders/: compile.bat  shader.frag
VulkanTest/src/: Camera.cpp  FileLoader.cpp  GuppyApp.cpp  InputHandler.cpp
VulkanTest/src/Geometry/: Model.cpp  Plane.cpp  Vertex.cpp
cmake/: FindFMOD.cmake  MakeImGuiLibrary.cmake
data/models/Orange_obj/: Orange.mtl
data/models/grass (low-poly)/: grass_low_poly.DAE  grass_low_poly.max  grass_low_poly.mtl  maps.TENTACLES_UNZIP
data/models/pear_export_obj/: pear_export.mtl
imgui/: CMakeLists.txt  README.md  imgui.cpp  imgui.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h
libs/: CMakeLists.txt  stb_image.h
misc/: compareScrap1.txt  compareScrap2.txt  scrap.cpp
shaders/: CMakeLists.txt  color.cube.vert  color.frag  color.pbr.frag  color.vert  common.frag.glsl  comp.fft.one.glsl  comp.hdr.glsl  comp.hff.glsl  comp.hff.hght.glsl  comp.hff.norm.glsl  comp.ocean.dispersion.glsl  comp.ocean.fft.glsl  comp.ocean.vertInput.glsl  comp.particle.attractor.glsl  comp.particle.cloth.glsl  comp.particle.cloth.norm.glsl  comp.particle.euler.glsl  cube.frag  cube.vert  deferred.frag.glsl  deferred.mrt.color.frag.glsl  deferred.mrt.cs.vert.glsl  deferred.mrt.frag.glsl  deferred.mrt.vert.glsl  deferred.mrt.ws.vert.glsl  deferred.vert.glsl  frag.color.deferred.mrt.glsl  frag.deferred.glsl  frag.deferred.ms.glsl  frag.deferred.ssao.glsl  frag.particle.deferred.mrt.fountain.glsl  frag.point.deferred.mrt.glsl  frag.reflect.refract.deferred.mrt.glsl  frag.shadow.glsl  frag.skybox.deferred.mrt.glsl  frag.texture.deferred.mrt.glsl  geom.color.cube.glsl  geom.point.cube.glsl  geom.silhouette.glsl  (+74 more)
shaders/cdlod/: vert.cdlod.texture.glsl
shaders/ocean/: comp.ocean.dispersion.glsl  frag.ocean.deferred.mrt.glsl
shaders/shadow/: geom.shadow.cube.glsl  vert.color.shadow.cube.glsl  vert.color.shadow.glsl  vert.texture.shadow.cube.glsl  vert.texture.shadow.glsl
