cmake_minimum_required(VERSION 2.8.11)

SET(CDLOD_FILE_NAMES
    CDLODQuadTree.cpp
    CDLODQuadTree.h
    Common.h
    MiniMath.h
)

SET(CDLOD_LIB CDLOD)

ADD_LIBRARY(${CDLOD_LIB} STATIC
    ${CDLOD_FILE_NAMES}
)

INCLUDE_DIRECTORIES(${CDLOD_LIB} PUBLIC
    ${GLM_LIB_DIR}
)

TARGET_INCLUDE_DIRECTORIES(${CDLOD_LIB} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

TARGET_LINK_LIBRARIES(${CDLOD_LIB}
)

SET(CDLOD_LIB CDLOD PARENT_SCOPE)