cmake_minimum_required(VERSION 2.8.11)

SET(CDLOD_FILE_NAMES
    CDLOD/CDLODQuadTree.cpp
    CDLOD/CDLODQuadTree.h
    CDLOD/CDLODRenderer.cpp
    CDLOD/CDLODRenderer.h
    CDLOD/Common.h
    CDLOD/MiniMath.h
    CDLOD/VkGridMesh.cpp
    CDLOD/VkGridMesh.h
)

SET(TARGET CDLOD)

ADD_LIBRARY(${TARGET} STATIC
    ${CDLOD_FILE_NAMES}
)

INCLUDE_DIRECTORIES(${TARGET} PUBLIC
    ${GLM_LIB_DIR}
    ${Vulkan_INCLUDE_DIR}
    ${COMMON_INCLUDE_DIR}
)

TARGET_INCLUDE_DIRECTORIES(${TARGET} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES
    CXX_STANDARD 17
)

SET(CDLOD_LIB ${TARGET} PARENT_SCOPE)