cmake_minimum_required(VERSION 2.8.11)

SET(COMMON_FILE_NAMES
    Common/Context.cpp
    Common/Context.h
    Common/Debug.h
    Common/Helpers.cpp
    Common/Helpers.h
    Common/Types.h
)

SET(TARGET Common)

ADD_LIBRARY(${TARGET} STATIC
    ${COMMON_FILE_NAMES}
)

INCLUDE_DIRECTORIES(${TARGET} PUBLIC
    ${GLM_LIB_DIR}
    ${Vulkan_INCLUDE_DIR}
)

TARGET_INCLUDE_DIRECTORIES(${TARGET} PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

SET_TARGET_PROPERTIES(${TARGET} PROPERTIES
    CXX_STANDARD 17
)

ADD_DEFINITIONS(
    -DVULKAN_HPP_DISPATCH_LOADER_DYNAMIC=1
)

SET(COMMON_LIB ${TARGET} PARENT_SCOPE)
SET(COMMON_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR} PARENT_SCOPE)